covered graph to prevent label hovering

--- a/player.scss
+++ b/player.scss
@@ -14,6 +14,13 @@
 
 .graph-output {
 	position: relative;
+	
+	.cover {
+		height: 100%;
+		width: 100%;
+		z-index: 110;
+		position: absolute;
+	}
 }
 
 h1.md-headline {
